# rinha_2024

./: Cargo.toml  README.md
src/: main.rs
