[package]
name = "rinha_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
